[gd_scene load_steps=2 format=3 uid="uid://dmplt45ihhac7"]

[ext_resource type="Script" uid="uid://bxe6t0jpxtml5" path="res://src/UI/LevelMenu.gd" id="1_xcdv4"]

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xcdv4")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36100003
anchor_top = 0.21100001
anchor_right = 0.674
anchor_bottom = 0.23600002
offset_left = 95.12796
offset_top = 0.27198792
offset_right = -94.948
offset_bottom = 16.571991
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "SELECT YOUR LEVEL"

[node name="LevelButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.49500003
anchor_right = 0.504
anchor_bottom = 1.0
offset_left = -99.0
offset_top = 0.23999023
offset_right = 103.39197
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Level1" type="Button" parent="LevelButtons"]
layout_mode = 2
text = "level1"

[node name="Level2" type="Button" parent="LevelButtons"]
layout_mode = 2
text = "level2
"

[node name="Level3" type="Button" parent="LevelButtons"]
layout_mode = 2
text = "level3
"

[node name="Level4" type="Button" parent="LevelButtons"]
layout_mode = 2
text = "level4
"

[node name="Level5" type="Button" parent="LevelButtons"]
layout_mode = 2
text = "level5"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.012
anchor_right = 0.13100001
anchor_bottom = 0.102000006
offset_left = 0.41599846
offset_top = 0.22399998
offset_right = 0.08798218
offset_bottom = -0.09600067
text = "salir y guardar"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44400004
anchor_top = 0.846
anchor_right = 0.57600003
anchor_bottom = 0.95400006
offset_left = -0.4880371
offset_top = -4.208008
offset_right = -4.552063
offset_bottom = -0.1920166
text = "PLAY"

[connection signal="pressed" from="LevelButtons/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="LevelButtons/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="LevelButtons/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="LevelButtons/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="LevelButtons/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
